[gd_scene load_steps=9 format=3 uid="uid://br5hjk4tuqevc"]

[ext_resource type="Texture2D" uid="uid://cojs13m8b3goy" path="res://Acte2_Pirate/ImportImages/Object/PirateShipFloorAlly.png" id="1_o4w1k"]
[ext_resource type="Script" path="res://Acte2_Pirate/Scripts/Object/pirate_ship_floor_ally.gd" id="2_bpb32"]
[ext_resource type="Texture2D" uid="uid://cp6nvas6wh4t2" path="res://Acte2_Pirate/ImportImages/Object/Caisse.jpg" id="4_71koj"]
[ext_resource type="Texture2D" uid="uid://dwadien2tbu2a" path="res://Acte2_Pirate/ImportImages/Object/PirateShipFloorEnemy.png" id="4_i34nl"]
[ext_resource type="PackedScene" uid="uid://c0uvwprmivkbo" path="res://Acte2_Pirate/Scenes/PNJ/boss_pirate.tscn" id="5_tghgi"]

[sub_resource type="Animation" id="Animation_qq78t"]
resource_name = "Navigation"
length = 3.33334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.833333, 1.66667, 2.5, 3.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.00349066, 0.0, -0.00349066, 0.0]
}

[sub_resource type="Animation" id="Animation_hkayo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5x7v"]
_data = {
"Navigation": SubResource("Animation_qq78t"),
"RESET": SubResource("Animation_hkayo")
}

[node name="PirateShipFloor" type="Node2D"]
z_index = 1
scale = Vector2(0.65, 0.65)
script = ExtResource("2_bpb32")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j5x7v")
}

[node name="ShipFloorAlly" type="Sprite2D" parent="."]
texture = ExtResource("1_o4w1k")

[node name="CaisseCorrection" type="Sprite2D" parent="ShipFloorAlly"]
z_index = 1
position = Vector2(195.385, 95.3846)
scale = Vector2(0.307692, 0.307692)
texture = ExtResource("4_71koj")

[node name="ShipFloorEnemy" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.538, -35)
scale = Vector2(1.1, 1)
texture = ExtResource("4_i34nl")

[node name="bossPirate" parent="ShipFloorEnemy" instance=ExtResource("5_tghgi")]
position = Vector2(114.686, 153.462)
scale = Vector2(0.3, 0.3)

[node name="Caisse" type="Node2D" parent="ShipFloorEnemy"]
position = Vector2(142.658, -52.6923)
scale = Vector2(1.357, 1.357)

[node name="CaisseCorrection" type="Sprite2D" parent="ShipFloorEnemy/Caisse"]
z_index = 1
position = Vector2(-265.734, 128.846)
scale = Vector2(0.308, 0.34)
texture = ExtResource("4_71koj")

[node name="CaisseCorrection2" type="Sprite2D" parent="ShipFloorEnemy/Caisse"]
z_index = 1
position = Vector2(-265.734, 98.0769)
scale = Vector2(0.308, 0.34)
texture = ExtResource("4_71koj")

[node name="StaticBody2D" type="StaticBody2D" parent="ShipFloorEnemy/Caisse"]
z_index = 2
position = Vector2(-274.125, 91.9231)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="ShipFloorEnemy/Caisse/StaticBody2D"]
position = Vector2(6.18875, 22.3077)
polygon = PackedVector2Array(16.1884, -34.2308, 16.1884, -3.46154, 16.4564, 32.0194, -11.7836, 31.9231, -11.7836, -34.2308)

[node name="Caisse2" type="Node2D" parent="ShipFloorEnemy"]
position = Vector2(552.448, -41.9231)
scale = Vector2(1.35714, 1.31818)

[node name="CaisseCorrection2" type="Sprite2D" parent="ShipFloorEnemy/Caisse2"]
z_index = 1
position = Vector2(-237.762, 98.4615)
scale = Vector2(0.308, 0.34)
texture = ExtResource("4_71koj")

[node name="CaisseCorrection3" type="Sprite2D" parent="ShipFloorEnemy/Caisse2"]
z_index = 1
position = Vector2(-237.762, 128.846)
scale = Vector2(0.308, 0.34)
texture = ExtResource("4_71koj")

[node name="StaticBody2D" type="StaticBody2D" parent="ShipFloorEnemy/Caisse2"]
z_index = 2
position = Vector2(-274.125, 91.9231)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="ShipFloorEnemy/Caisse2/StaticBody2D"]
position = Vector2(6.18875, 22.3077)
polygon = PackedVector2Array(16.1884, -34.2308, 44.1605, -34.2308, 44.1605, -3.46154, 44.1605, 31.9231, 16.4829, 31.6578, 16.1885, -3.46154)
